# my_bot

./: CMakeLists.txt  README.md  package.xml  txt.txt
config/: aruco.rviz  aruco_map.yaml  odom.rviz  rviz.rviz
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  rover.gazebo.xacro
launch/: aruco_detector.py  aruco_localization.py  aruco_world.launch.py  arucopython.py  better_launch_sim.launch.py  camera_info_publisher.py  continuous_teleop.py  description_relay.py  gazebo.launch.py  gazebo.xml  generate_aruco_tags.py  keyboard_teleop.py  launch.182.py  launch.py  launch_control.py  launch_sim.launch.py  py.py  relay_cmd.py  remote.py  remote_control.py  rover.py  rover2  rover2.py  rsp.launch.py  start_gazebo.launch.py  unified.py  wheel_controller.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
media/materials/textures/: generate_markers.py
scripts/: aruco.material
worlds/: aruco_world.world
