<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>My robot package with Gazebo simulation and ArUco localization</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Основные зависимости для ROS 2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Зависимости для работы с изображениями -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>  <!-- Заменили vision_opencv на конкретные пакеты -->

  <!-- Зависимости для Gazebo -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_msgs</depend>
  
  <!-- Зависимости для визуализации -->
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  
  <!-- Дополнительные утилиты -->
  <depend>teleop_twist_keyboard</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>
  
  <!-- Python зависимости -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Указываем Gazebo пути к моделям и медиаресурсам -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>