<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>My robot package with Gazebo simulation and ArUco localization</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>Apache License 2.0</license>

  <!-- Только ament_cmake - удалить ament_cmake_python -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Все зависимости ТОЛЬКО для выполнения (exec_depend) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- Вернуть vision_opencv как единый пакет -->
  <exec_depend>vision_opencv</exec_depend>
  
  <!-- Зависимости для Gazebo -->
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  
  <!-- Зависимости для визуализации -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <!-- Вернуть критические зависимости -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros2_aruco</exec_depend>
  
  <!-- Дополнительные утилиты -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  
  <!-- Python зависимости -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Указываем Gazebo пути к моделям и медиаресурсам -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>